--- a/Source/Main/Main.csproj
+++ b/Source/Main/Main.csproj
@@ -25,6 +25,9 @@
   <PropertyGroup>
     <ApplicationIcon>bookmarks.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
@@ -121,6 +124,11 @@
     <Content Include="bookmarks.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if exist "$(SolutionDir)..\Deploy\Build\sign-bin.cmd" (
+"$(SolutionDir)..\Deploy\Build\sign-bin.cmd"
+)</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
